Piccolo cambiamento grafico al tag pre in Home/Index

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     string titolo = (string)ViewData["titolo"];}
 @model webmva.Models.Progetto
 <div class="container">
-    <pre style="background-color:transparent; border: 0px solid black; margin-top:2em; color:navy">@titolo </pre>
+    <pre style="background-color:transparent; border: 0px solid black; margin-top:2em; color:navy; line-height:1em;">@titolo </pre>
     <h3 style="color:navy">
         Collaborative Application for Vulnerability Assessment Analysis
     </h3>
