--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -23,13 +23,26 @@
         <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
         <meta name="theme-color" content="#ffffff">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
-        <link rel="stylesheet" href="~/css/site.css" />
+        <!--<link rel="stylesheet" href="~/css/site.css" />-->
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css">
     </environment>
     <environment exclude="Development">
         <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css" asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
               asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
-        <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
+              <link rel="apple-touch-icon" sizes="57x57" href="/fav/apple-icon-57x57.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="/fav/apple-icon-60x60.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="/fav/apple-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="/fav/apple-icon-76x76.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="/fav/apple-icon-114x114.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="/fav/apple-icon-120x120.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="/fav/apple-icon-144x144.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="/fav/apple-icon-152x152.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="/fav/apple-icon-180x180.png">
+        <link rel="icon" type="image/png" sizes="192x192" href="/fav/android-icon-192x192.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/fav/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="96x96" href="/fav/favicon-96x96.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/fav/favicon-16x16.png">
+        <!--<link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />-->
     </environment>
 </head>
 <body id="page-top">
