--- a/Views/Report/Tutti.cshtml
+++ b/Views/Report/Tutti.cshtml
@@ -30,7 +30,7 @@
                             </tr>
                         </thead>
                     </div>
-                    <tbody class="pippo">
+                    <tbody>
                         @*@foreach(var itm in @Model)*@
                         @for (int j = 0; j < Model.Count; j++)
                         {
