--- a/Views/Report/Details.cshtml
+++ b/Views/Report/Details.cshtml
@@ -9,11 +9,12 @@
     </div>
     <div class="panel panel-default">
         <div class="col-lg-8 col-lg-offset-1">
-            <table class="table">
+            <table class="table" id="sort">
                 <div class="method">
                     <thead>
                         <tr>
                             <th> <div style="font-size=4pt;"><h6><strong>PDF unico</strong> </h6></div><input type="checkbox" name="selezionaTutto" onclick="SelezTT()" /></th>
+                            <th class="index">Ordine</th>
                             <th>
                                 Percorso
                             </th>
@@ -31,6 +32,7 @@
                                 <td>
                                     <input type="checkbox" value="@Model.Percorsi.ElementAt(i).ID" name="check" />
                                 </td>
+                                <td class="index" style="cursor: ns-resize;"><i class="glyphicon glyphicon-menu-hamburger"></i></td>
                                 <td>
                                     <input type="submit" asp-action="Download" asp-route-cosa="singolo" asp-route-filePath="Report/@Model.Percorsi.ElementAt(i).Percorso" value="@Model.Percorsi.ElementAt(i).Percorso" class="btn btn-link">
                                 </td>
@@ -88,4 +90,30 @@
 	        }
 	    ).change();
 	    });
-    </script> }
+    // drag&drop
+    function DeselezTT() {
+            var modulo = $('input[name=check]').each(function (index, element) {
+                $(element).prop('checked', false);
+            });
+            $('input[name=selezionaTutto]').prop('checked', false);
+        }
+        var fixHelperModified = function (e, tr) {
+            var $originals = tr.children();
+            var $helper = tr.clone();
+            $helper.children().each(function (index) {
+                $(this).width($originals.eq(index).width())
+            });
+            return $helper;
+        },
+            updateIndex = function (e, ui) {
+                $('td.index', ui.item.parent()).each(function (i) {
+                    //$(this).html(i + 1);
+                    DeselezTT();
+                });
+            };
+        $("#sort tbody").sortable({
+            helper: fixHelperModified,
+            stop: updateIndex
+        }).disableSelection();
+    </script>
+    }
